lab1/Test/L1-A-9-97.cmm
int BnD4HWNCClLkhr7E ( float sS_xvxKb3cFgk6cZ , int 
  mlDd9UN_uv ) {
  struct aM0MT5NxYnezJhCQKnSH {
  }_2MRMyfchDYe8tYTQ [ 379192247 ] , z7bteHsPZufm7u 
    = P0lubs959v9wKDA = w1OgxDinMaXmdVXU != * c5d [ o 
    || _YGs8ngY && TzfZtbDq5j6Dd3GlbgpQ > jFmnIpDQ + BzJnKA2QO 
    / ( P = geB7d0oPdunkgOIf <= Y1Fq5uZd_UyXqzwRr_5 + 
    c ( xeuU9wWk = Z7JH4WeZFk9Hz0GD_8Td || Q3K0OuemN0RV 
    >= SNoLG [ RYRBwuJ8RoLOjQic || n3TM1WFHYpiev24z / 
    - G [ pxFWq4 > ( UdJMJHR2q - ( YlVbCp3lu && NVZZAG05k 
    > ! ( O8pbb18 == ( P <= WZLOYCK / KJFNl9k ( LxfTzSaiy_048j5n 
    , oEnrLvq9jw69QiO ) ) * HWC8vcFfK0s6TR_P_ ) + TgFygitf_ywM32 
    ) ) <= yyp84UodojiOnqTF ] * UW == 712083378.1638834574 
    < 508228358 ] ) ) . nFT9X5e - - ! ! ! ! m ( ) ] ;
}
int ;
struct TNIW7Tgu B6cBggcFqbhvk5Cz ( ) {
  if ( n1MAen5X6iZt )   return Y7xaibolo ;
else   while ( aAabZ5QMTB )   ZKwVt ;


}
int bWF2zb_6 , S8gGH 

;
struct {
  int hacK9enPgs3 ;
};
;
struct gmx2Oi7 ;
int ;
int JKm45hl38TzlC ( ) {
}
int ;
int ;
int ;
int ;
int ;
;
int ;
int ;
int ;
int SQ1pBl_FFHqNsdc_ ( ) {
  if ( YkSnnk3GCKUytc9UN ) {
    suhDVXY ;
{
      if ( _vHgkfEbKlT8N )       wJvz_ 
else       if ( ILxT2PrmEMiWryAc3 )       DxuvD4Mv6 
        ;


    }  }
}
int ;
